--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
-    "firebase": "~2.1.0"
+    "firebase": "~2.1.0",
+    "angularfire": "~0.9.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0",
